2003-03-27  Jay Foster   <jay@systech.com>

	* src/ics1890.c: Added configurable PHY MII address.
	* src/lxt970.c: Added configurable PHY MII address.
	* src/lxt972.c: Added configurable PHY MII address.
	* cdl/ks32c5000_eth.cdl: CDL to allow configuration of the PHY
	MII address.  Documented support for ICS1893AF PHY.
	* src/ks5000_ether.c: Added configurable PHY MII address.
	Fixed local definition of eth_drv_init() macro (produces no code
	change).  Fixed strncpy()s for the ETH_DRV_GET_IF_STATS IOCTL to
	leave room for the NUL termination character and use parenthesis
	with the 'sizeof' operator.  Added ETH_DRV_SET_MAC_ADDRESS IOCTL
	support to allow setting the MAC (ESA) address from the application.
	Fixed to only attach the CYGNUM_HAL_INTERRUPT_EXT0 if the
	HavePHYinterrupt conditional is defined.  This prevents unhandled
	interrupts from getting through when HavePHYinterrupt is not defined.

2003-03-26  Chris Garry  <cgarry@sweeneydesign.co.uk>

	* cdl/ks32c5000_eth.cdl
	* src/ks5000_ether.c: Added CDL control for level of driver
	debug output.

2003-03-20  Chris Garry  <cgarry@sweeneydesign.co.uk>

	* src/ks5000_ether.c:
	Added volatile to *rxReadPointer, *txDonePointer and
	*txWritePointer's definitions.

2003-02-20  Chris Garry  <cgarry@sweeneydesign.co.uk>

	* src/ks5000_ether.c:
	Removed line setting up programmable I/O pins as debug outputs.

2002-11-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ks32c5000_eth.cdl: Ensure exactly 1 PHY enabled.

2002-11-05  Chris Garry  <cgarry@sweeneydesign.co.uk>

	* src/lxt972.c: New file. Added LXT972 PHY support.
	* cdl/ks32c5000_eth.cdl: CDL to allow configuration of the above.

	* src/ks5000_ether.c: (CYG_BYTEORDER == CYG_MSBFIRST) used to swap
	endian in BDMARxConfigVar declaration and txWritePointer transmit
	descriptor reserved fields setup.
	(ks32c5000_eth_poll): Added call to BDMA Rx isr routine.

2002-10-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ks32c5000_eth.cdl